configured maven